--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
         <!-- ===== CSS ===== -->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title>Responsive landing page coffee 3D</title>
+        <title>Student's Booth</title>
     </head>
     <body>
         <!--===== HEADER =====-->
         <header class="l-header">
             <nav class="nav bd-grid">
                 <div>
-                    <a href="#" class="nav__logo">Coffee</a>
+                    <a href="#" class="nav__logo">studenteract</a>
                 </div>
                 
                 <div class="nav__toggle" id="nav-toggle">
@@ -30,9 +30,10 @@
 
                     <ul class="nav__list">
                         <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
-                        <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
-                        <li class="nav__item"><a href="#skills" class="nav__link">Blog</a></li>
-                        <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
+                        <li class="nav__item"><a href="about" class="nav__link">About</a></li>
+                        <li class="nav__item"><a href="booths" class="nav__link">Visit Booths</a></li>
+                        <li class="nav__item"><a href="register" class="nav__link">Register</a></li>
+                        <li class="nav__item"><a href="contact" class="nav__link">Contact</a></li>
                     </ul>
                 </div>
             </nav>
@@ -52,9 +53,9 @@
                     </div>
 
                     <div class="home__data">
-                        <h1 class="home__title">Coffee<br> Drink 3D</h1>
-                        <p class="home__description">Let's help discover the best coffee drink <br> of the week.</p>
-                        <a href="#" class="home__button">Get Started</a>
+                        <h1 class="home__title">Studenteract<br> Drink 3D</h1>
+                        <p class="home__description">Connecting students from all over <br> the world based on similar interests.</p>
+                        <a href="#" class="home__button">Visit Booths</a> <a href="#" class="home__button">Visit Booths</a>
                     </div>
                 </div>
             </section>
