--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     </div>
 
                     <div class="home__data">
-                        <h1 class="home__title">Students<br>Interact3D</h1>
+                        <h1 class="home__title">Students<br>Interact</h1>
                         <p class="home__description">Connecting students from all over <br> the world based on similar interests.</p>
                         <a href="#" class="home__button">Visit Booths</a> <a href="#" class="home__button">Visit Booths</a>
                     </div>
