--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
                         <a href="#" class="home__button">Visit Booths</a> <a href="#" class="home__button">Visit Booths</a>
                     </div>
                 </div>
+                
+                <div>
+                    <h1 class="home__title" style="text-align:right;">About</h1>
+                        <p class="home__description">Connecting students from all over <br> the world based on similar interests.</p>
+                </div>
             </section>
         </main>
 
