--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
                     </div>
                 </div>
                 
-                <div>
-                    <h1 class="home__title" style="text-align:right;">About</h1>
-                        <p class="home__description">Connecting students from all over <br> the world based on similar interests.</p>
+                <div style="padding: 20px;">
+                    <h1 class="home__title" style="text-align:right; color:white; ">About</h1>
+                        <p class="home__description" style="text-align:right; color:white;" >Connecting students from all over <br> the world based on similar interests.</p>
                 </div>
             </section>
         </main>
