--- a/index.html
+++ b/index.html
@@ -57,13 +57,16 @@
                     <div class="home__data">
                         <h1 class="home__title">Students<br>Interact</h1>
                         <p class="home__description">Connecting students from all over <br> the world based on similar interests.</p>
-                        <a href="#" class="home__button">Visit Booths</a> <a href="#" class="home__button">Visit Booths</a>
+                        <a href="#" class="home__button">Visit Booths</a> <a href="#" class="home__button">Register Now</a>
                     </div>
                 </div>
                 
                 <div style="padding: 100px;">
                     <h1 class="home__title" style="text-align:right; color:white; ">About</h1>
-                        <p class="home__description" style="text-align:right; color:white;" >Connecting students from all over <br> the world based on similar interests.</p>
+<!--                         <p class="home__description" style="text-align:right; color:white;" >Connecting students from all over <br> the world based on similar interests.</p> -->
+                    <p class="home__description" style="text-align:right; color:white;" >Connecting students from all across the world based on similar interests. 
+                        Visit virtual booths, explore different activities, make friends globally, learn about different topics, have discussions and healthy
+                        debates on topics that intrigue you, interact with people of the same age group, meet new people and have fun !</p>
                 </div>
             </section>
         </main>
