--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <p class="home__description">Connecting students from all over <br> the world based on similar interests.</p>
                         <a href="#" class="home__button">Visit Booths</a> <a href="#" class="home__button">Register Now</a>
                     </div>
-                </div>
+<!--                 </div> -->
                 
                        <div class="home__data">
                         <h1 class="home__title" style="text-align:right; color:white; ">Students<br>Interact</h1>
