--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
                         <p class="home__description">Connecting students from all over <br> the world based on similar interests.</p>
                         <a href="#" class="home__button">Visit Booths</a> <a href="#" class="home__button">Register Now</a>
                     </div>
-<!--                 </div> -->
+                </div>
                 
+                 <div class="home__container bd-grid">
                        <div class="home__data">
                         <h1 class="home__title" style="text-align:right; color:white; ">Students<br>Interact</h1>
                         <p class="home__description" style="text-align:right; color:white;" >Connecting students from all over <br> the world based on similar interests.</p>
