--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                  <div class="home__container bd-grid">
 
                          <div class="home__data">
-                        <h1 class="home__title" style="text-align:right; color:white; ">Students<br>Interact</h1>
-                        <p class="home__description" style="text-align:right; color:white;" >Connecting students from all over <br> the world based on similar interests.</p>
+                        <h1 class="home__title" style=" color:white; ">Students<br>Interact</h1>
+                        <p class="home__description" style="color:white;" >Connecting students from all over <br> the world based on similar interests.</p>
                         <a href="#" class="home__button">Visit Booths</a> <a href="#" class="home__button">Register Now</a>
                     </div>
 
@@ -73,9 +73,9 @@
                             <img src="assets/img/img1.png" alt="" data-speed="-2" class="move">
                         <img src="" alt="" data-speed="2" class="move">
                         <img src="" alt="" data-speed="2" class="move">
-                        <img src="assets/img/img4.png" alt="" data-speed="-2" class="move">
-                        <img src="assets/img/img5.png" alt="" data-speed="-2" class="move">
-                        <img src="assets/img/img6.png" alt="" data-speed="2" class="move">
+                        <img src="" alt="" data-speed="-2" class="move">
+                        <img src="" alt="" data-speed="-2" class="move">
+                        <img src="" alt="" data-speed="2" class="move">
                      </div>
                 </div>
                 
