--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     </div>
 
                        <div class="home__img">
-                            <img src="assets/img/img1.png" alt="" data-speed="-2" class="move">
+                            <img src="" alt="" data-speed="-2" class="move">
                         <img src="" alt="" data-speed="2" class="move">
                         <img src="" alt="" data-speed="2" class="move">
                         <img src="" alt="" data-speed="-2" class="move">
