--- a/index.html
+++ b/index.html
@@ -64,9 +64,11 @@
                  <div class="home__container bd-grid">
 
                          <div class="home__data">
-                        <h1 class="home__title" style=" color:white; ">Students<br>Interact</h1>
-                        <p class="home__description" style="color:white;" >Connecting students from all over <br> the world based on similar interests.</p>
-                        <a href="#" class="home__button">Visit Booths</a> <a href="#" class="home__button">Register Now</a>
+                        <h1 class="home__title" style=" color:white; ">About</h1>
+                        <p class="home__description" style="color:white;" >Connecting students from all across the world based on similar interests. 
+                        Visit virtual booths, explore different activities, make friends globally, learn about different topics, have discussions and healthy
+                        debates on topics that intrigue you, interact with people of the same age group, meet new people and have fun !</p>
+                        
                     </div>
 
                        <div class="home__img">
