--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
                  <div class="home__container bd-grid">
 
                          <div class="home__data">
-                        <h1 class="home__title" style=" color:white; ">About</h1>
-                        <p class="home__description" style="color:white;" >Connecting students from all across the world based on similar interests. 
-                        Visit virtual booths, explore different activities, make friends globally, learn about different topics, have discussions and healthy
-                        debates on topics that intrigue you, interact with people of the same age group, meet new people and have fun !</p>
+                        <h1 class="home__title" style="text-align:right; color:white; ">About</h1>
+                        <p class="home__description" style="text-align:right; color:white;" >Connecting students from all across the world based on similar interests. <br>
+                        Visit virtual booths, explore different activities, make friends globally, learn about different topics, <br> have discussions and healthy
+                        debates on topics that intrigue you, interact with people of the same age group, <br> meet new people and have fun !</p>
                         
                     </div>
 
