--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
 
                          <div class="home__data">
                         <h1 class="home__title" style="text-align:right; color:white; ">About</h1>
+                          <p class="home__description" style="text-align:right; color:white;" >Connecting students from all across the world based on similar interests. <br>
+                        Visit virtual booths, explore different activities, make friends globally, <br> learn about different topics,  have discussions and healthy
+                        debates on topics that <br> intrigue you, interact with people of the same age group, <br> meet new people and have fun !</p>
                         <p class="home__description" style="text-align:right; color:white;" >Connecting students from all across the world based on similar interests. <br>
                         Visit virtual booths, explore different activities, make friends globally, <br> learn about different topics,  have discussions and healthy
                         debates on topics that <br> intrigue you, interact with people of the same age group, <br> meet new people and have fun !</p>
