--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <!--                           <p class="home__description" style="text-align:right; color:#FCA4A6;" >Connecting students from all across the world based on similar interests. 
                         Visit virtual booths, explore different activities,  </p> -->
                         <p class="home__description" style="text-align:right; color:white;" >
-                            <span style="text-align:right; color:#FCA4A6;" >Connecting students from all across the world based on similar interests. 
+                            <span style="text-align:right; color:#FCA4A6; font-size:0.1rem" >Connecting students from all across the world based on similar interests. 
                                 Visit virtual booths, explore different activities </span><br>
                             Connecting students from all across the world based on similar interests. <br>
                         Visit virtual booths, explore different activities, make friends globally, <br> learn about different topics,  have discussions and healthy
