--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 
                          <div class="home__data">
                         <h1 class="home__title" style="text-align:right; color:white; ">About</h1>
+                        <h1 style="text-align:right; color:white; font-family:'Poppins'; ">About</h1>
 <!--                           <p class="home__description" style="text-align:right; color:#FCA4A6;" >Connecting students from all across the world based on similar interests. 
                         Visit virtual booths, explore different activities,  </p> -->
                         <p class="home__description" style="text-align:right; color:white;" >
