--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
                          <div class="home__data">
                         <h1 class="home__title" style="text-align:right; color:white; ">About</h1>
-                        <h1 style="text-align:right; color:white; font-family:'Poppins'; ">About</h1>
+<!--                         <h1 style="text-align:right; color:white; font-family:'Poppins'; ">About</h1> -->
 <!--                           <p class="home__description" style="text-align:right; color:#FCA4A6;" >Connecting students from all across the world based on similar interests. 
                         Visit virtual booths, explore different activities,  </p> -->
                         <p class="home__description" style="text-align:right; color:white;" >
@@ -73,7 +73,10 @@
                                 Visit virtual booths, explore different activities </span><br>
                             Connecting students from all across the world based on similar interests. <br>
                         Visit virtual booths, explore different activities, make friends globally, <br> learn about different topics,  have discussions and healthy
-                        debates on topics that <br> intrigue you, interact with people of the same age group, <br> meet new people and have fun !</p>
+                        debates on topics that <br> intrigue you, interact with people of the same age group, <br> meet new people and have fun ! <br><br>
+                             
+                            Visit virtual booths on multiple topics like music, dance, programming, politics, pop culture, films and more, register to your booths of choice
+                             (unlimited allowed) and connect with high school students with the same interests from all over the world.</p>
                         
                     </div>
 
