--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@
                         Visit virtual booths, explore different activities, make friends globally, <br> learn about different topics,  have discussions and healthy
                         debates on topics that <br> intrigue you, interact with people of the same age group, <br> meet new people and have fun ! <br><br>
                              
-                            Visit virtual booths on multiple topics like music, dance, programming, politics, pop culture, films and more, register to your booths of choice
-                             (unlimited allowed) and connect with high school students with the same interests from all over the world.</p>
+                            Visit virtual booths on multiple topics like music,<br>
+                            dance, programming, politics, pop culture, films and more, <br> register to your booths of choice
+                             (unlimited allowed) and connect with high school students<br> with the same interests from all over the world.</p>
                         
                     </div>
 
