--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
                         Visit virtual booths, explore different activities, make friends globally, <br> learn about different topics,  have discussions and healthy
                         debates <br> on topics that  intrigue you, interact with people of the same age group, <br> meet new people and have fun ! <br><br>
                              
-                            Visit virtual booths on multiple topics like music,<br>
-                            dance, programming, politics, pop culture, films and more, <br> register to your booths of choice
+                            Visit virtual booths on multiple topics like music,
+                            dance, programming, <br> politics, pop culture, films and more,  register to <br> your booths of choice
                              (unlimited allowed) and connect with <br>
                             high school students with the same interests from 
-                            <br> all over the world.</p>
+                             all over the world.</p>
                         
                     </div>
 
