--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         debates <br> on topics that  intrigue you, interact with people of the same age group, <br> meet new people and have fun ! <br><br>
                              
                             Visit virtual booths on multiple topics like music,
-                            dance, programming, <br> politics, pop culture, films and more,  register to <br> your booths of choice
+                            dance, programming, <br> politics, pop culture, films and more,  register to your booths <br>of choice
                              (unlimited allowed) and connect with <br>
                             high school students with the same interests from 
                              all over the world.</p>
