--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                              
                             Visit virtual booths on multiple topics like music,
                             dance, programming, <br> politics, pop culture, films and more,  register to your booths <br>of choice
-                             (unlimited allowed) and connect with <br>
-                            high school students with the same interests from 
+                             (unlimited allowed) and connect with 
+                            high school students <br> with the same interests from 
                              all over the world.</p>
                         
                     </div>
