--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
                     <ul class="nav__list">
                         <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
-                        <li class="nav__item"><a href="about" class="nav__link">About</a></li>
+                        <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
                         <li class="nav__item"><a href="booths" class="nav__link">Visit Booths</a></li>
                         <li class="nav__item"><a href="register" class="nav__link">Register</a></li>
                         <li class="nav__item"><a href="contact" class="nav__link">Contact</a></li>
@@ -60,7 +60,9 @@
                         <a href="#" class="home__button">Visit Booths</a> <a href="#" class="home__button">Register Now</a>
                     </div>
                 </div>
-                
+                </section>
+            
+            <section class="about-section" id="home">
                  <div class="home__container bd-grid">
 
                          <div class="home__data">
