--- a/booths.html
+++ b/booths.html
@@ -2355,7 +2355,7 @@
                                         </div>
                                     </li>
                                     <li>
-                                        <a href="https://forms.gle/UScjTrMVRqduxVma8" class="thumbnail">
+                                        <a href="" class="thumbnail">
                                             <img src="media/student-booth.png" alt="sports"/>
                                         </a>
                                         <div class="caption">
@@ -2363,7 +2363,7 @@
                                         </div>
                                     </li>
                                     <li>
-                                        <a href="https://forms.gle/UScjTrMVRqduxVma8" class="thumbnail">
+                                        <a href="" class="thumbnail">
                                             <img src="media/student-booth.png" alt="jobs"/>
                                         </a>
                                         <div class="caption">
@@ -2371,7 +2371,7 @@
                                         </div>
                                     </li>
                                     <li>
-                                        <a href="https://forms.gle/UScjTrMVRqduxVma8" class="thumbnail">
+                                        <a href="" class="thumbnail">
                                             <img src="media/student-booth.png" alt="studying"/>
                                         </a>
                                         <div class="caption">
@@ -2379,7 +2379,7 @@
                                         </div>
                                     </li>
                                     <li>
-                                        <a href="https://forms.gle/UScjTrMVRqduxVma8" class="thumbnail">
+                                        <a href="" class="thumbnail">
                                             <img src="media/student-booth.png" alt="jobs"/>
                                         </a>
                                         <div class="caption">
@@ -2387,7 +2387,7 @@
                                         </div>
                                     </li>
                                     <li>
-                                        <a href="https://forms.gle/UScjTrMVRqduxVma8" class="thumbnail">
+                                        <a href="" class="thumbnail">
                                             <img src="media/student-booth.png" alt="jobs"/>
                                         </a>
                                         <div class="caption">
@@ -2395,7 +2395,7 @@
                                         </div>
                                     </li>
                                     <li>
-                                        <a href="https://forms.gle/UScjTrMVRqduxVma8" class="thumbnail">
+                                        <a href="" class="thumbnail">
                                             <img src="media/student-booth.png" alt="jobs"/>
                                         </a>
                                         <div class="caption">
@@ -2403,7 +2403,7 @@
                                         </div>
                                     </li>
                                     <li>
-                                        <a href="https://forms.gle/UScjTrMVRqduxVma8" class="thumbnail">
+                                        <a href="" class="thumbnail">
                                             <img src="media/student-booth.png" alt="jobs"/>
                                         </a>
                                         <div class="caption">
