--- a/huhu.html
+++ b/huhu.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Swiper demo</title>
+  <title>Swiper Demo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 
 
@@ -14,11 +14,11 @@
   <!-- Swiper -->
   <div class="swiper gallery-top">
     <div class="swiper-wrapper">
-      <div class="swiper-slide" style="background-image:url(./images/nature-1.jpg)"></div>
-      <div class="swiper-slide" style="background-image:url(./images/nature-2.jpg)"></div>
-      <div class="swiper-slide" style="background-image:url(./images/nature-3.jpg)"></div>
-      <div class="swiper-slide" style="background-image:url(./images/nature-4.jpg)"></div>
-      <div class="swiper-slide" style="background-image:url(./images/nature-5.jpg)"></div>
+      <div class="swiper-slide" style="background-image:media/student-booth.png"></div>
+      <div class="swiper-slide" style="background-image:media/student-booth.png"></div>
+      <div class="swiper-slide" style="background-image:media/student-booth.png"></div>
+      <div class="swiper-slide" style="background-image:media/student-booth.png"></div>
+      <div class="swiper-slide" style="background-image:media/student-booth.png"></div>
       <div class="swiper-slide" style="background-image:url(./images/nature-6.jpg)"></div>
       <div class="swiper-slide" style="background-image:url(./images/nature-7.jpg)"></div>
       <div class="swiper-slide" style="background-image:url(./images/nature-8.jpg)"></div>
@@ -31,9 +31,9 @@
   </div>
   <div class="swiper gallery-thumbs">
     <div class="swiper-wrapper">
-      <div class="swiper-slide" style="background-image:url(./images/nature-1.jpg)"></div>
-      <div class="swiper-slide" style="background-image:url(./images/nature-2.jpg)"></div>
-      <div class="swiper-slide" style="background-image:url(./images/nature-3.jpg)"></div>
+      <div class="swiper-slide" style="background-image:media/student-booth.png"></div>
+      <div class="swiper-slide" style="background-image:media/student-booth.png"></div>
+      <div class="swiper-slide" style="background-image:media/student-booth.png"></div>
       <div class="swiper-slide" style="background-image:url(./images/nature-4.jpg)"></div>
       <div class="swiper-slide" style="background-image:url(./images/nature-5.jpg)"></div>
       <div class="swiper-slide" style="background-image:url(./images/nature-6.jpg)"></div>
