--- a/register1.html
+++ b/register1.html
@@ -428,7 +428,7 @@ input[type=checkbox] {
   <br>
       <div class="nextpage"> <a href="#other"> nextpage </a>
     </div>
-    <section id="other-section" class="inactive" style="display: none;">
+    <section id="other-section" class="inactive">
     
     <input type="submit" value="Submit" style="font-family:'Poppins';">
   </form>
