--- a/register2.html
+++ b/register2.html
@@ -898,7 +898,7 @@ input[type=checkbox] {
             <div id="main">
                 <div class="inner">
                     <section id="home-section">
-                        div id="wrapper">
+                        <div id="wrapper">
             <div id="main">
                 <div class="inner">
                     <section id="home-section">
