--- a/register2.html
+++ b/register2.html
@@ -985,6 +985,9 @@ input[type=checkbox] {
       </div> </form> </div>
                     </section>
                     <section id="section01-section">
+                         <div id="wrapper">
+            <div id="main">
+                <div class="inner">
                                  <h1 style="font-family:'Poppins'; text-align:center; color:#F3F0D7; font-size:1.5rem;">
                         <strong>Register Now</strong></h1>
                                     
